fix(extenstion): add workaround for staking layout overflow

--- a/packages/common/src/ui/styles/theme.scss
+++ b/packages/common/src/ui/styles/theme.scss
@@ -8,7 +8,9 @@ $theme-light-grey: var(--data-light-grey, #f9f9f9);
 $theme-light-grey-border: #efefef;
 $theme-light-grey-border-opacity: #efefef8f;
 
-$breakpoint-minimum: 768px;
+// TODO: Workaround to address overflow issues on staking layout, this is going to be address in https://input-output.atlassian.net/browse/LW-6560
+// once this issue is addressed, go back to 768px
+$breakpoint-minimum: 810px;
 $breakpoint-xsmall: 1024px;
 $breakpoint-small: 1280px;
 $breakpoint-medium: 1440px;
